# pydata-london-2022

./: .gitignore  README.md  azure-pipelines.yaml  deployments.py  index.html  pyproject.toml  setup.cfg  setup.py
docs/: index.css  index.html  schedule.json  script.py
notebooks/: option-analytics.ipynb
src/pydata_london_2022/: __init__.py  panel_serve.py
src/pydata_london_2022/option_smiles.py/: option_smiles.py
src/pydata_london_2022/schedules/: create_svg.py
tests/: test_hello.py
www/: index.html
