# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html?highlight=options.extras_require#configuring-setup-using-setup-cfg-files
[metadata]
name = pydata-london-2022
version = attr: pydata_london_2022.VERSION
description = Code from pydata-london-2022
long_description = file: README.MD
keywords = pydata-london-2022
license = MIT
url = https://github.com/MarcSkovMadsen/pydata-london-2022
maintainer=Marc Skov Madsen
maintainer_email=marc.skov.madsen@gmail.com
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir=
    =src
zip_safe = False
include_package_data = True
install_requires =
    altair==4.2.0
    holoviews==1.14.9
    hvplot==0.8.0
    matplotlib==3.5.2
    pandas
    panel==0.13.1
    param==1.12.1
    plotly==5.8.2
    pyarrow==8.0.0
    sqlalchemy==1.4.37


[options.extras_require]
dev = 
    autoflake
    bandit
    black
    cookiecutter
    invoke
    mypy
    pylint
    pylint2junit
    pytest
    pytest-cov
    pytest-mock
    toml
    types-invoke
    types-requests
    types-setuptools
    wheel
all =
    jupyterlab==3.4.3
    jupyter-panel-proxy
    

[options.package_data]
* = *.txt, *.rst

[options.entry_points]
console_scripts =
    jupyter_serverproxy_servers = panel_serve:main

[options.packages.find]
where=src
exclude =
    examples*
    tools*
    docs*
    tests*
